--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     background: #f6f6f6;
     font-family: "Poppins", sans-serif;
     overflow-x: hidden;
-    height: 100vh;
+    height: 100%;
     margin: auto;
     display: flex;
 }
@@ -85,7 +85,6 @@ form {
 header {
     width: 220px;
     height: 220px;
-    margin: 1em auto;
 }
 
 form input {
@@ -139,11 +138,11 @@ button {
     .bg {
         top: -7em;
         width: 450px;
-        height: 95vh;
+        height: 800px;
     }
     header {
         width: 90%;
-        height: 250px;
+        height: 150px;
     }
     .inputs {
         margin: 0;
@@ -151,5 +150,6 @@ button {
     input,
     button {
         padding: 18px 15px;
+        background-color: mediumseagreen;
     }
 }
